<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Picture Places</string>
    <string name="action_settings">Settings</string>
    <string name="camera">Take a Picture</string>
    <string name="content">Image</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="local">Enter Location</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="delete">Delete</string>
    <string name="action_search">Search</string>
    <string name="action_camera">Camera</string>
    <string name="hint">Search</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_header">Settings</string>
    <string name="camera_option">Camera</string>
    <string name="front_camera">Front Camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="title_activity_widget_config">WidgetConfig</string>
    <string name="config_title">Set Image Resource</string>
    <string name="pic_radio">Image Taken Last</string>
    <string name="loc_radio">Image from Last Location</string>
    <string name="done_button">DONE</string>

</resources>
