<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pic_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:gravity="center"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/local" />
    <EditText
        android:id="@+id/locText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />
	<Button
	    android:id="@+id/okButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/ok"
	    />
    <Button
	    android:id="@+id/cancelButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/cancel"
	    />
    
</LinearLayout>