<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient"
    tools:context=".SettingsActivity" >

    <TextView 
        android:id="@+id/settingsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
	    android:textStyle="bold"
	    android:text="@string/settings_header"
	    android:layout_centerHorizontal="true" />
	<RadioGroup android:id="@+id/radioGroup"
	    		android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignRight="@+id/settingsHeader"
		        android:layout_below="@+id/radioGroupHeader"
		        android:layout_marginRight="40dp"
		        android:layout_marginTop="20dp">
	    <RadioButton
	        android:id="@+id/radioButton1"
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	        android:text="@string/front_camera"
	        android:onClick="onRadioButtonClicked"
	        android:checked="true" />

	    <RadioButton
	        android:id="@+id/radioButton2"
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	        android:text="@string/back_camera"
	        android:onClick="onRadioButtonClicked" />
	    
	</RadioGroup>

	<TextView
	    android:id="@+id/radioGroupHeader"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/radioGroup"
	    android:layout_below="@+id/settingsHeader"
	    android:layout_marginTop="39dp"
	    android:textSize="20sp"
	    android:textStyle="bold"
	    android:text="@string/camera_option" />

	<Button
	    android:id="@+id/gpsButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/radioGroup"
	    android:layout_alignRight="@+id/settingsHeader"
	    android:layout_below="@+id/radioGroup"
	    android:layout_marginTop="52dp"
	    android:background="@drawable/blue_button"
	    android:textSize="20sp"
	    android:textColor="#FFFFFF"
	    android:text="@string/gps_settings" />
    
</RelativeLayout>
