<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="100dp" 
        android:layout_centerHorizontal="true"
        android:padding="0dp"
        android:contentDescription="@string/content"
        android:src="@drawable/logo"/>

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/camButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blue_button"
        android:layout_marginTop="22dp"
        android:textColor="#FFFFFF"
        android:text="@string/gallery" />

    <Button
        android:id="@+id/camButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:background="@drawable/red_button"
        android:text="@string/camera"
        android:textColor="#FFFFFF" />
    
	<TextView 
	    android:id="@+id/listHeader"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:textStyle="bold"
	    android:layout_below="@+id/galleryButton"/>
	
    <ListView
        android:id="@+id/locatList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/listHeader"
        android:divider="#C0C0C0"
        android:dividerHeight="2dp"
        android:layout_marginTop="10dp" 
        android:background="#FFFFFF">
    </ListView>
    
</RelativeLayout>
